src/tests/snapshots/parser_test__tests__vm__lexer_ok@basic.txt.snap
---
source: src/tests/vm.rs
expression: compiler.chunk
input_file: src/tests/vm_inputs/success/basic.txt
---
=== basic.txt ===
0000 WriteText("Hello ")
0001 LoadConst(I64(1))
0002 LoadConst(I64(10))
0003 LoadName("a")
0004 Mul
0005 Plus
0006 WriteTop

