src/tests/snapshots/parser_test__tests__vm__lexer_ok@constant_folding.txt.snap
---
source: src/tests/vm.rs
expression: compiler.chunk
input_file: src/tests/vm_inputs/success/constant_folding.txt
---
=== constant_folding.txt ===
0000 LoadConst(I64(1))
0001 LoadConst(I64(10))
0002 Plus
0003 WriteTop

