src/tests/snapshots/parser_test__tests__vm__vm_blocks@nested.txt.snap
---
source: src/tests/vm.rs
expression: s
input_file: src/tests/vm_inputs/blocks/nested.txt
---
=== nested.txt ===
0000 CallBlock("hello")


>> Block: hello
=== nested.txt ===
0000 WriteText("body")
0001 CallBlock("inside_hello")
---
>> Block: inside_hello
=== nested.txt ===
0000 WriteText("more")
---

