src/tests/snapshots/parser_test__tests__vm__vm_blocks@simple.txt.snap
---
source: src/tests/vm.rs
expression: s
input_file: src/tests/vm_inputs/blocks/simple.txt
---
=== simple.txt ===
0000 CallBlock("hello")
0001 WriteText("\n")
0002 CallBlock("other")
0003 WriteText("\n")


>> Block: hello
=== simple.txt ===
0000 WriteText("body")
---
>> Block: other
=== simple.txt ===
0000 WriteText("more")
---

