src/tests/snapshots/parser_test__tests__vm__vm_ok@filter_section.txt.snap
---
source: src/tests/vm.rs
expression: compiler.chunk
input_file: src/tests/vm_inputs/success/filter_section.txt
---
=== filter_section.txt ===
0000 Capture
0001 WriteText("\nHello ")
0002 LoadName("world")
0003 WriteTop
0004 WriteText("\n")
0005 EndCapture
0006 LoadConst(String("lang"))
0007 LoadConst(String("fr"))
0008 BuildKwargs(1)
0009 ApplyFilter("capitalize")

