src/tests/snapshots/parser_test__tests__vm__vm_ok@if.txt.snap
---
source: src/tests/vm.rs
expression: compiler.chunk
input_file: src/tests/vm_inputs/success/if.txt
---
=== if.txt ===
0000 LoadName("user")
0001 PopJumpIfFalse(3)
0002 WriteText("A")

