src/tests/snapshots/parser_test__tests__vm__vm_ok@ifs_else.txt.snap
---
source: src/tests/vm.rs
expression: compiler.chunk
input_file: src/tests/vm_inputs/success/ifs_else.txt
---
=== ifs_else.txt ===
0000 LoadName("a")
0001 LoadConst(I64(0))
0002 Equal
0003 PopJumpIfFalse(5)
0004 WriteText("A")
0005 LoadName("a")
0006 LoadConst(I64(1))
0007 Equal
0008 PopJumpIfFalse(10)
0009 WriteText("B")
0010 Jump(12)
0011 WriteText("Oops")

