src/tests/snapshots/parser_test__tests__vm__vm_ok@logic_cond.txt.snap
---
source: src/tests/vm.rs
expression: compiler.chunk
input_file: src/tests/vm_inputs/success/logic_cond.txt
---
=== logic_cond.txt ===
0000 LoadName("a")
0001 JumpIfFalseOrPop(3)
0002 LoadName("b")
0003 PopJumpIfFalse(5)
0004 WriteText("1")
0005 LoadName("c")
0006 JumpIfTrueOrPop(8)
0007 LoadName("d")
0008 PopJumpIfFalse(10)
0009 WriteText("2")

