src/tests/snapshots/parser_test__tests__vm__vm_ok@logic_render.txt.snap
---
source: src/tests/vm.rs
expression: compiler.chunk
input_file: src/tests/vm_inputs/success/logic_render.txt
---
=== logic_render.txt ===
0000 LoadName("a")
0001 JumpIfFalseOrPop(3)
0002 LoadName("b")
0003 WriteTop
0004 LoadName("a")
0005 JumpIfTrueOrPop(7)
0006 LoadName("b")
0007 WriteTop
0008 LoadName("a")
0009 JumpIfFalseOrPop(11)
0010 LoadName("b")
0011 JumpIfTrueOrPop(13)
0012 LoadName("c")
0013 WriteTop

